<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:padding="16dp"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCadastroMedicamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvTituloCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TITULO1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:layout_marginBottom="24dp" />

            <EditText
                android:id="@+id/edtNomeMedicamento"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/NOMEM"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/edtHorario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/HORARIO"
                android:inputType="time"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/edtQuantidade"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/QUANTIDADE"
                android:inputType="number"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/edtObservacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/OBSERVAÇÃO"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/btnSalvarMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:textAllCaps="false"
                android:backgroundTint="@color/water_green"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/red"
                android:text="@string/Voltar" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
