<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:padding="16dp"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCadastroUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="494dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/telefone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/senha"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editConfirmarSenha"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Confirmar Senha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/water_green"
                android:text="@string/salvar" />

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/red"
                android:text="@string/Voltar" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
