<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@android:color/white"
    android:padding="16dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/tvTituloMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TITULO2"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:layout_marginBottom="32dp" />
            <Button
                android:id="@+id/btnListaMedicamentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LISTAM"
                android:textAllCaps="false"
                android:backgroundTint="@color/water_green"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp" />
            <Button
                android:id="@+id/btnCadastrarMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CADASTRARM"
                android:textAllCaps="false"
                android:backgroundTint="@color/green2"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp" />
            <Button
                android:id="@+id/btnSair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sair"
                android:textAllCaps="false"
                android:backgroundTint="@color/red"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
